--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1053,7 +1053,7 @@
 
     <script>
         const TICKERS = ["AAPL", "MSFT", "META", "GOOGL", "AMZN", "TSLA", "NVDA", "NFLX", "IBM", "ORCL"];
-        const API_URL = 'http://127.0.0.1:5000';
+        const API_URL = '';
 
         // Currency exchange rates (relative to USD)
         const EXCHANGE_RATES = {
